syntax = "proto3";
package edges;

option go_package = "github.com/snple/kokomi/pb/edges;edges";

import "slot_message.proto";
import "generic_message.proto";

message ListSlotRequest {
    pb.Page page = 1;
    // string device_id = 2;
    string tags = 3;
    string type = 4;
}

message ListSlotResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Slot slot = 3;
}

message LinkSlotRequest {
    string id = 1;
    sint32 status = 2;
}

message CloneSlotRequest {
    string id = 1;
    // string device_id = 2;
}

message PullSlotRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string device_id = 3;
}

message PullSlotResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Slot slot = 3;
}

service SlotService {
    rpc Create(pb.Slot) returns (pb.Slot) {}
    rpc Update(pb.Slot) returns (pb.Slot) {}
    rpc View(pb.Id) returns (pb.Slot) {}
    rpc ViewByName(pb.Name) returns (pb.Slot) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ListSlotRequest) returns (ListSlotResponse) {}
    rpc Link(LinkSlotRequest) returns (pb.MyBool) {}
    rpc Clone(CloneSlotRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Slot) {}
    rpc Pull(PullSlotRequest) returns (PullSlotResponse) {}
}
